# assignment-2

./: .gitignore  .gitmodules  README.md
homework/Dataset/: dataset_generator.py
homework/Dataset/0/: input0.raw  input1.raw  output.raw
homework/Dataset/1/: input0.raw  input1.raw  output.raw
homework/Dataset/2/: input0.raw  input1.raw  output.raw
homework/Dataset/3/: input0.raw  input1.raw  output.raw
homework/Dataset/4/: input0.raw  input1.raw  output.raw
homework/Dataset/5/: input0.raw  input1.raw  output.raw
homework/Dataset/6/: input0.raw  input1.raw  output.raw
homework/Dataset/7/: input0.raw  input1.raw  output.raw
homework/Dataset/8/: input0.raw  input1.raw  output.raw
homework/Dataset/9/: input0.raw  input1.raw  output.raw
homework/naive_mm/: main.c
lab/Dataset/: dataset_generator.py  pyproject.toml
lab/Dataset/0/: input0.raw  output.raw
lab/Dataset/1/: input0.raw  output.raw
lab/Dataset/2/: input0.raw  output.raw
lab/Dataset/3/: input0.raw  output.raw
lab/Dataset/4/: input0.raw  output.raw
lab/Dataset/5/: input0.raw  output.raw
lab/Dataset/6/: input0.raw  output.raw
lab/Dataset/7/: input0.raw  output.raw
lab/Dataset/8/: input0.raw  output.raw
lab/Dataset/9/: input0.raw  output.raw
lab/loop/: main.c
