[project]
name = "dataset-a"
version = "0.1.0"
description = ""
authors = [
    {name = "Christopher L. Crutchfield",email = "ccrutchf@ucsd.edu"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy (>=2.3.2,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
